[tool.poetry]
name = "receipt-field-extractor"
version = "0.1.0"
description = ""
authors = ["Dainis Boumber <dainis.boumber@gmail.com>"]
readme = "README.md"
packages = [{include = "receipt_field_extractor"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
